--- a/my-app/tasks.json
+++ b/my-app/tasks.json
@@ -1,9 +1,46 @@
 {
   "tasks": [
     {
-      "id": "1727528685945",
-      "title": "task1",
-      "completed": false
+      "id": "1727529884753",
+      "text": "7656565",
+      "status": "pending",
+      "date": "1972-05-22"
+    },
+    {
+      "id": "1727530006582",
+      "text": "sss",
+      "status": "completed",
+      "date": "1971-06-24"
+    },
+    {
+      "id": "1727530019491",
+      "text": "aaaaa",
+      "status": "completed",
+      "date": "2024-09-19"
+    },
+    {
+      "id": "1727530025880",
+      "text": "aaaa",
+      "status": "completed",
+      "date": "1971-06-24"
+    },
+    {
+      "id": "1727530553574",
+      "text": "hhhgg",
+      "status": "onProgress",
+      "date": "2024-09-19"
+    },
+    {
+      "id": "1727530699825",
+      "text": "sssa",
+      "status": "pending",
+      "date": "2024-09-19"
+    },
+    {
+      "id": "1727547901121",
+      "text": "hh",
+      "status": "pending",
+      "date": "2024-09-11"
     }
   ]
 }
